--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-tensorflow~=2.11.0
-matplotlib~=3.6.2
-sklearn~=0.0.post1
-numpy~=1.24.0
+numpy~=1.23.5
+keras~=2.12.0
+matplotlib~=3.7.1
+seaborn~=0.12.2
+pandas~=2.0.2
+scikit-learn~=1.2.2
