--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 numpy~=1.23.5
-keras~=2.12.0
+keras~=2.11.0
 matplotlib~=3.7.1
 seaborn~=0.12.2
 pandas~=2.0.2
 scikit-learn~=1.2.2
+elasticsearch~=8.8.0
+sklearn~=0.0.post1
